--- a/index.html
+++ b/index.html
@@ -3,38 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>todolist 만들기</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
-  <body>
-    <header>
-      <div>
-        <h1>할 일 목록</h1>
-      </div>
-    </header>
-
-    <main>
-      <form>
-        <div>
-          <label for="input">할 일</label>
-          <input type="text" id="input" />
-        </div>
-        <button>추가</button>
-      </form>
-
-      <ul>
-        <!-- <li>
-          <div>
-            <p>공부하기 공부하기 공부하기 공부하기 공부하기 공부하기</p>
-            <button>삭제</button>
-          </div>
-        </li> -->
-      </ul>
-    </main>
-
-    <script src="database.js"></script>
-
-    <script src="rendering.js"></script>
-    <script src="todos.js"></script>
-  </body>
+  <body></body>
 </html>
